hphp/hack/test/typecheck/shape_field_punning/class_constants.php.exp
ERROR: File "class_constants.php", line 15, characters 45-50:
Shape uses literal string as field name (Typing[4050])
  File "class_constants.php", line 15, characters 14-31:
  But expected a class constant. Shape fields cannot be a mix of literals and constants.
ERROR: File "class_constants.php", line 22, characters 22-39:
Shape uses class constant as field name (Typing[4049])
  File "class_constants.php", line 22, characters 14-19:
  But expected a literal string. Shape fields cannot be a mix of literals and constants.
